[package]
name = "pcv_kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
ndarray = { version = "0.17.2", features = ["rayon"] }
rand = "0.10.1"
rand_distr = "0.6.0"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18"
